cursive-bootstrap/tests/ui/E-SEM/E-SEM-2803.cursive
// RUN: compile-fail
// DIAG: E-SEM-2803
// SPEC: 8.17
// DESC: Class implementation strengthens precondition

class Processor {
    procedure process(~, x: i32) -> i32 |= x >= 0
}

record StrictProcessor <: Processor {
    value: i32
    procedure process(~, x: i32) -> i32 |= x >= 10 {  //~ ERROR E-SEM-2803: strengthens precondition
        return ~.value + x
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
